5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1582_1331.log
== TEST (2019-03-23 19:44:24) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:45:03) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:46:17) 
-- CODE:
print(50//3 50%3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50%3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:46:38) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:48:20) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print (50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:48:26) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print (50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:48:36) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print (50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:48:42) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print (50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:49:09) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:49:19) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:50:22) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:51:11) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:51:43) 
-- CODE:
# Valor pago a cada guerreiro
print(50//3)
# Valor pago ao informante
print(50%3)
-- EXECUTION TIME:
0.211981
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
